tiny fix on small fz btn variables

--- a/assets/sass/_theme/_variables.sass
+++ b/assets/sass/_theme/_variables.sass
@@ -143,9 +143,10 @@
     --btn-border: #{$btn-border-desktop}
     --btn-border-radius: #{$btn-border-radius-desktop}
     --btn-min-width: #{$btn-min-width-desktop}
+    --btn-small-font-size: #{$btn-small-font-size-desktop}
+    --btn-small-padding: #{$btn-small-padding-desktop}
     --btn-large-font-size: #{$btn-large-font-size-desktop}
     --btn-large-padding: #{$btn-large-padding-desktop}
-    --btn-small-padding: #{$btn-small-padding-desktop}
 
   // -------------- //
   //      GRID      //
